--- a/frontend/src/Pages/Voluntarios/Voluntarios.module.css
+++ b/frontend/src/Pages/Voluntarios/Voluntarios.module.css
@@ -8,7 +8,7 @@
     height: auto;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-end;
     padding-block: 2%;
     gap:1%
